# Skye

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json
include/: cameracomponent.h  componentmanagers.h  debugutils.h  ecsmanager.h  inputcomponent.h  mesh.h  meshcomponent.h  opaquetypes.h  renderer.h  shader.h  transformcomponent.h  window.h
shader/: frag.glsl  vert.glsl
src/: ecsmanager.cpp  main.cpp  mesh.cpp  meshcomponent.cpp  shader.cpp  window.cpp
unittest/: CMakeLists.txt  CameraComponentTest.cpp  ComponentManagerTest.cpp  ECSTest.cpp  MeshTest.cpp
unittest/include/: GLMTestHelpers.h
